@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/server.c: Select op->facing instead of op->direction in process_events
+    for players and monsters as the direction reference for the face to display.
+    Fix for bug #1528182. (*few* ! that's a lot of bugs ! :))
 server/spell_util.c: Make the search for a friendly target for some spells also
     browse transports located in the square from which the spell was cast.
     This is a fix for bug #1528018
